k8s/strategies/ab-testing/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-variant-a
  namespace: aceest-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-app
      variant: a
  template:
    metadata:
      labels:
        app: aceest-app
        variant: a
    spec:
      containers:
        - name: aceest-app
          image: aceest-fitness-gym:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
