k8s/strategies/ab-testing/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-variant-b
  namespace: aceest-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-app
      variant: b
  template:
    metadata:
      labels:
        app: aceest-app
        variant: b
    spec:
      containers:
        - name: aceest-app
          image: aceest-fitness-gym:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
