k8s/strategies/ab-testing/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-variant-b
  namespace: aceest-devops
spec:
  selector:
    app: aceest-app
    variant: b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
