k8s/strategies/ab-testing/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-ab-main
  namespace: aceest-devops
spec:
  ingressClassName: nginx
  rules:
    - host: aceest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-variant-a
                port:
                  number: 80
