k8s/strategies/ab-testing/ingress-b-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-ab-variant-b
  namespace: aceest-devops
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "x-ab-test"
    nginx.ingress.kubernetes.io/canary-by-header-value: "B"
spec:
  ingressClassName: nginx
  rules:
    - host: aceest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-variant-b
                port:
                  number: 80
